--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".AddNewEventActivity" />
         <activity android:name=".AddFriendsToEventActivity" />
+        <activity android:name=".AddFriendsActivity" />
     </application>
 
 </manifest>
